--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <title>Academic Project Page</title>
+  <title>Safety-Critical Traffic Simulation with Adversarial Transfer of Driving Intentions</title>
   <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
@@ -56,11 +56,14 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">First Author</a><sup>*</sup>,</span>
-                <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,</span>
-                  <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Third Author</a>
+                   <p class="author-list">
+                  <span>Zherui Huang</span>,
+                  <span>Xing Gao</span><sup>*</sup>,
+                  <span>Guanjie Zheng</span><sup>*</sup>,
+                  <span>Licheng Wen</span> 
+                  <span>Xuemeng Yang</span> 
+                  <span>Xiao Sun</span>
+                  </p>
                   </span>
                   </div>
 
