--- a/index.html
+++ b/index.html
@@ -52,24 +52,24 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Academic Project Page</h1>
+            <h1 class="title is-1 publication-title">Safety-Critical Traffic Simulation with Adversarial Transfer of Driving Intentions</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
                    <p class="author-list">
-                  <span>Zherui Huang</span>,
-                  <span>Xing Gao</span><sup>*</sup>,
-                  <span>Guanjie Zheng</span><sup>*</sup>,
-                  <span>Licheng Wen</span> 
-                  <span>Xuemeng Yang</span> 
-                  <span>Xiao Sun</span>
+                  <span>Zherui Huang</span><sup>1</sup>,
+                  <span>Xing Gao</span><sup>2*</sup>,
+                  <span>Guanjie Zheng</span><sup>1*</sup>,
+                  <span>Licheng Wen</span><sup>1</sup>，
+                  <span>Xuemeng Yang</span><sup>1</sup>，
+                  <span>Xiao Sun</span><sup>1</sup>
                   </p>
                   </span>
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">Institution Name<br>Conferance name and year</span>
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
+                    <span class="author-block"><sup>1</sup>Shanghai Jiao Tong University，<sup>2</sup>Shanghai Artificial Intelligence Laboratory, <br>ICRA 2025</span>
+                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Conrresponding Author</small></span>
                   </div>
 
                   <div class="column has-text-centered">
