--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
               <span class="author-block">
                    <p class="author-list">
                   <span>Zherui Huang</span><sup>1</sup>,
-                  <span>Xing Gao</span><sup>2*</sup>,
-                  <span>Guanjie Zheng</span><sup>1*</sup>,
+                  <span><a href="https://william-gx.github.io" target="_blank">Xing Gao</a></span><sup>2*</sup>,
+                  <span><a href="https://jhc.sjtu.edu.cn/~gjzheng" target="_blank">Guanjie Zheng</a></span><sup>1*</sup>,
                   <span>Licheng Wen</span><sup>1</sup>，
                   <span>Xuemeng Yang</span><sup>1</sup>，
                   <span>Xiao Sun</span><sup>1</sup>
