--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
 <section class="result">
   <div class="container is-max-desktop">
     <div class="hero-body">
+      <h2 class="title is-3">Visual Demos</h2>
       <video poster="" id="tree" autoplay controls muted loop height="100%">
         <!-- Your video here -->
         <source src="static/videos/intsim_results.mp4"
